# kraker.github.io

./: .gitignore  .pre-commit-config.yaml  .vale.ini  CLAUDE.md  README.md  TODO.md  go.mod  hugo.yaml  pyproject.toml
.github/workflows/: hugo.yaml
_posts/: 2019-10-16-welcome-to-jekyll.markdown
archetypes/: blog.md
assets/css/: custom.css
content/: _index.md  faq.md  now.md  study-guides.md  uses.md
content/about/: index.md
content/blog/: _index.md  faq.md  gh-runner-rhel.md  grit.md  kvdo.md  learn-devops.md  learn-python-qr.md  linux-sysadmin.md  second-brain-in-vim.md
content/blog/learn-ansible/: index.md
content/blog/learn-python-qr/: index.md
content/blog/rhel-vagrant/: index.md
content/blog/second-brain/: index.md
content/blog/technical-learning/: index.md
content/contact/: index.md
content/projects/: _index.md
content/resume/: index.md
data/: icons.yaml
docs/: migration-inventory.md  pr-description-draft.md
docs/drafts/: about-bio.md  homepage.md  site-description.md
i18n/: en.yaml
layouts/: 404.html
layouts/_partials/custom/: footer.html  head-end.html
layouts/_shortcodes/: recent-posts.html
scripts/: optimize-images.sh
static/: CNAME  head-shot-2-cropped.xcf  site.webmanifest
styles/: .gitignore
styles/Kraker/: BrandConsistency.yml  MarketingFluff.yml  Wordiness.yml  meta.json
styles/config/vocabularies/Kraker/: accept.txt
